# sber_beauty_code_contest

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.txt  db.db  docker-compose.yml  examples.http  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: app.py  flask_app.py  run_flask.py
src/api/: base_repository.py  base_service.py  exceptions.py  routes.py  testres.py  views.py
src/api/assets/: repository.py  schemas.py  service.py  views.py
src/api/balance/: exceptions.py  repository.py  schemas.py  service.py  views.py
src/api/balance/schemas/: refill_balance.py
src/api/buy_assets/: repository.py  schemas.py  service.py  views.py
src/api/common/: repository.py  schemas.py  service.py  views.py
src/api/sell_assets/: repository.py  schemas.py  service.py  views.py
src/api/services/: operations.py
src/api/transactions/: repository.py  service.py
src/api/user_operations/: repository.py  service.py  views.py
src/api/user_operations/schemas/: buy_assets.py  refill_balance.py  user_balance.py
src/api/utils/: assets_mapping.py
src/core/: config.py  database.py  db_test_data.py  exception_handlers.py  exceptions.py
src/core/db/: database.py  db_test_data.py  enums.py  mixins (dont used).py  models.py
src/domain/: dto.py  use_cases.py
src/domain/use_cases/: assets.py  balance.py  buy_assets.py  common.py  sell_assets.py  user.py
