[tool.poetry]
name = "sber-beauty-code-contest"
version = "0.1.0"
description = ""
authors = ["Ivan Belyaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
apiflask = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
